changing index text css margin

--- a/wdiexercise.css
+++ b/wdiexercise.css
@@ -78,7 +78,7 @@ p {
 	}
 
 	#content {
-		top: -90px;
+		/*top: -90px;*/
 	}
 }
 
@@ -86,17 +86,17 @@ p {
 	width: 1000px;
 	height: auto;
 }
- 
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
 
 }
- 
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
 
 }
- 
+
 /* Landscape phones and down */
 @media (max-width: 480px) {
 
