--- a/css/code.css
+++ b/css/code.css
@@ -11,12 +11,12 @@
  height: 248px;
  width: 80%;
  text-align: center;
- color: white;
- background-color: gray;
+ color: #42CA61;
+ background-color: white;
  border-radius: 10px;
  border-style: solid;
  border-width: thin;
- border-color: gray;
+ border-color: #42CA61;
 }
 
 .annotation {
