--- a/node_version/views/test.ejs
+++ b/node_version/views/test.ejs
@@ -11,19 +11,21 @@
   <script type="text/javascript" src="/javascripts/code.js"></script>
 </head>
 <body>
-  <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <p id="name">P. Chubinskiy</p>
-    <p><a href="index.html">About Me</a></p>
-    <!--<p><a href="writing.html">Writing</a></p>-->
-    <p><a href="artdesign.html">Art & Design</a></p>
-    <p><a href="contact.html">Contact</a></p>
+  <div class="row">
+    <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+      <p id="name">P. Chubinskiy</p>
+      <p><a href="index.html">About Me</a></p>
+      <!--<p><a href="writing.html">Writing</a></p>-->
+      <p><a href="artdesign.html">Art & Design</a></p>
+      <p><a href="contact.html">Contact</a></p>
+    </div>
   </div>
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12">
       <a href="http://lastichecked.herokuapp.com/">
-        <img class="in-progress" src="/images/lastichecked.png">
+        <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
