--- a/node_version/views/code.ejs
+++ b/node_version/views/code.ejs
@@ -39,7 +39,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="https://w09wdiproj.herokuapp.com/">
-        <img class="example" src="/images/w09_wdiproj3.png">
+        <img class="image" src="/images/w09_wdiproj3.png">
       </a>
     </div>
 
@@ -72,7 +72,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="https://tttcmyk.pancakeapps.com/">
-        <img id="ex_2" class="example" src="/images/tictactoe_cmyk.png">
+        <img id="ex_2" class="image" src="/images/tictactoe_cmyk.png">
       </a>
     </div>
 
@@ -85,7 +85,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="http://www.lrngo.com/coolstuff">
-        <img class="example" src="/images/lrngo_landing_pages/othercoolstuff.png">
+        <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
       </a>
     </div>
 
