--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -125,12 +125,12 @@
     font-size: 40px;
   }
 
-  #name {
+/*  #name {
     font-size: 75px;
   }
 
   p {
     font-size: 24px;
     font-family: 'Courier', serif;
-  }
+  }*/
 }
