--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -50,6 +50,10 @@
   width: 100%;
 }
 
+.film {
+  width: 100%;
+}
+
 @media (min-width: 408px) and (max-width: 767px) {
 	#menubar {
 		margin-left: 32%;
