changing font type

--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -54,6 +54,11 @@
   width: 100%;
 }
 
+p {
+  font-size: 14px;
+  font-family: 'Courier', serif;
+}
+
 @media (min-width: 408px) and (max-width: 767px) {
 	#menubar {
 		margin-left: 32%;
