adding sm, xs bootstrap to image wrapper

--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -50,6 +50,13 @@
   width: 100%;
 }
 
+.image2 {
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
+}
+
 .artdesign {
   width: 100%;
 }
