--- a/node_version/views/code.ejs
+++ b/node_version/views/code.ejs
@@ -3,12 +3,30 @@
 <head>
   <title></title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
-  <link href="/stylesheets/code.css" rel="stylesheet">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/javascripts/code.js"></script>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
+
+  <!-- Bootstrap core CSS -->
+  <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
@@ -23,7 +41,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="http://lastichecked.herokuapp.com/">
-        <img class="in-progress" src="/images/lastichecked.png">
+        <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
@@ -56,7 +74,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="">
-        <img class="in-progress" src="/images/pantry.io.png">
+        <img class="image" src="/images/pantry.io.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
@@ -98,7 +116,7 @@
 
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <a href="http://www.lrngo.com/coolstuff">
-      <img class="left1-mini col-lg-2" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
+      <img class="image2 left1-mini col-lg-2" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
     </a>
     <a href="http://www.lrngo.com/coolstuff">
       <img class="left2-mini col-lg-2" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
@@ -136,5 +154,9 @@
     <br>
     <br>
   </div>
+
+  <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
