--- a/node_version/views/code.ejs
+++ b/node_version/views/code.ejs
@@ -39,7 +39,7 @@
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-xs-12">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
