moved css into correct image class

--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -48,16 +48,16 @@
   border-width: thin;
   border-color: gray;
   width: 100%;
+  padding-right: 0px !important;
+  padding-left: 0px !important;
 }
 
-.image2 {
+/*.image2 {
   border-radius: 5px;
   border-style: solid;
   border-width: thin;
   border-color: gray;
-  padding-right: 0px !important;
-  padding-left: 0px !important;
-}
+}*/
 
 .artdesign {
   width: 100%;
