--- a/css/code.css
+++ b/css/code.css
@@ -1,22 +1,25 @@
-.example {
+.in-progress {
   width: 80%;
-  border-radius: 10px;
+  border-radius: 5px;
   border-style: solid;
   border-width: thin;
   border-color: gray;
+  position: relative;
 }
 
-.coming_soon {
- width: 395px;
- height: 248px;
- width: 80%;
- text-align: center;
- color: #42CA61;
- background-color: white;
- border-radius: 10px;
- border-style: solid;
- border-width: thin;
- border-color: #42CA61;
+.in-progress-text {
+  position: absolute;
+  z-index: 2;
+  margin-top: -26%;
+  left: 31%;
+}
+
+.example {
+  width: 80%;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
 }
 
 .annotation {
@@ -31,4 +34,63 @@
 
     text-decoration: none;
   }
+}
+
+.left1-mini {
+  display: block;
+  margin-top: 5px;
+  margin-left: 15px;
+  /*override bootstrap*/
+  padding-left: 0px;
+  padding-right: 0px;
+  /*override bootstrap*/
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
+}
+
+.left2-mini {
+  display: block;
+  margin-top: 5px;
+  margin-left: 37px;
+  /*override bootstrap*/
+  padding-left: 0px;
+  padding-right: 0px;
+  /*override bootstrap*/
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
+}
+
+.mini {
+  margin-top: 5px;
+  margin-left: 25px;
+  /*override bootstrap*/
+  padding-left: 0px;
+  padding-right: 0px;
+  /*override bootstrap*/
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
+}
+
+.botmost-mini {
+  margin-top: 5px;
+  margin-left: 25px;
+  margin-bottom: 25px;
+  /*override bootstrap*/
+  padding-left: 0px;
+  padding-right: 0px;
+  /*override bootstrap*/
+  border-radius: 5px;
+  border-style: solid;
+  border-width: thin;
+  border-color: gray;
+}
+
+#whitespace {
+  margin-top: 25px;
 }
