--- a/stylesheets/wdiexercise.css
+++ b/stylesheets/wdiexercise.css
@@ -69,9 +69,9 @@ p {
 }
 
 @media (min-width: 408px) and (max-width: 767px) {
-	#menubar {
+/*	#menubar {
 		margin-left: 32%;
-	}
+	}*/
 }
 
 @media (max-width: 1050px) {
