shortening margin on all mini classes

--- a/stylesheets/code.css
+++ b/stylesheets/code.css
@@ -38,10 +38,24 @@
     }
   }
 
+  .left1-mini {
+    display: block;
+    margin-top: 5px;
+    margin-left: 15px;
+    /*override bootstrap*/
+    padding-left: 0px;
+    padding-right: 0px;
+    /*override bootstrap*/
+    border-radius: 5px;
+    border-style: solid;
+    border-width: thin;
+    border-color: gray;
+  }
+
   .left2-mini {
     display: block;
     margin-top: 5px;
-    margin-left: 25px;
+    margin-left: 20px;
     /*override bootstrap*/
     padding-left: 0px;
     padding-right: 0px;
@@ -54,7 +68,7 @@
 
   .mini {
     margin-top: 5px;
-    margin-left: 25px;
+    margin-left: 20px;
     /*override bootstrap*/
     padding-left: 0px;
     padding-right: 0px;
@@ -85,7 +99,7 @@
 }
 
 @media (min-width: 1200px) {
-  .left1-mini {
+/*  .left1-mini {
     display: block;
     margin-top: 5px;
     margin-left: 15px;
@@ -97,7 +111,7 @@
     border-style: solid;
     border-width: thin;
     border-color: gray;
-  }
+  }*/
 }
 
 @media (max-width: 991px) {
