--- a/stylesheets/code.css
+++ b/stylesheets/code.css
@@ -81,7 +81,7 @@
 
   .botmost-mini {
     margin-top: 5px;
-    margin-left: 25px;
+    margin-left: 20px;
     margin-bottom: 25px;
     /*override bootstrap*/
     padding-left: 0px;
@@ -114,7 +114,7 @@
   }*/
 }
 
-@media (max-width: 991px) {
+@media (min-width: 480px) and (max-width: 991px) {
   .example_set {
     margin-left: .2%;
   }
